--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="page-header">
-  <h1>My Click Game<br> <small>Press Start Game &amp; click as many characters within 20 seconds.</small></h1>
+  <h1>My Click Game<br> <small>Press <strong>Start Game!</strong> &amp; click on as many <strong>Bitcoins</strong> within 20 seconds.</small></h1>
 </div>
 
 <button type="button" class="btn btn-primary">Start Game!</button> 
@@ -59,8 +59,8 @@
 
     <div class="col-md-2">
       <div class="well well-sm">
-        <h5>You clicked on</h5>
-        <p>15</p>
+        <h5>You clicked on:</h5>
+        <span></span>
       </div>
     </div>
 
