--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   <h1>My Click Game<br> <small>Press <strong>Start Game!</strong> &amp; click on as many <strong>Bitcoins</strong> within 20 seconds.</small></h1>
 </div>
 
-<button type="button" class="btn btn-primary start">Start Game!</button> 
+<button type="button" class="btn btn-primary" id="start">Start Game!</button> 
 
 
 <div class="container">
@@ -60,7 +60,7 @@
     <div class="col-md-2">
       <div class="well well-sm">
         <h5>You clicked on:</h5>
-        <span class="result"></span>
+        <span id="result"></span>
       </div>
     </div>
 
