added result to the html instead of alert

--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
     <div class="col-md-2">
       <div class="well well-sm">
         <h5>You clicked on:</h5>
-        <span id="result"></span>
+        <strong><span id="result"></span></strong>
       </div>
     </div>
 
